--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "serve": "nodemon server.js"
   },
   "author": "",
@@ -16,5 +16,10 @@
     "mongoose": "^6.2.8",
     "nodemon": "^2.0.15",
     "twilio": "^3.76.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0"
   }
 }
